<resources>
    <string name="app_name">ExamenU1</string>
    <string name="title_activity_table_layout">TableLayout</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_x">X</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_add">+</string>
    <string name="_0">0</string>
    <string name="_div">/</string>
    <string name="_point">.</string>
    <string name="_equal">=</string>
    <string name="type_your_name">Type your name</string>
    <string name="cancel">Exit</string>
    <string name="type_your_age">Type your age</string>
    <string name="type_your_phone">Type your Phone</string>
    <string name="submit">Submit</string>
</resources>
